basic connect and disconnect

--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
 <script src="/socket.io/socket.io.js"></script>
   <h1>Created servers!</h1>
 </body>
-<script>
-    var socket = io();
-    socket.on('connect', function(data) {
-        socket.emit('join', 'Hello World from client');
-    });
+<script src="static/game.js">
+
 </script>
 </html>
