--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <input type = "text" id = "chatValue" value = "enter message: ">
     <input type = "submit" id="chatSend" value = "send message">
   </div>
+  <div id="playerList">
+  </div>
 </body>
 <script src="static/game.js">
 
