--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 </div>
   <div id="chat" style = "display:none;">
     <input type = "text" id = "chatValue" value = "enter message: ">
-    <input type = "submit" id="chatSend" value = "send message">
+    <input type = "submit" id="chatSend" onClick="sendChat()" value = "send message">
+  </div>
+  <div id="chat">
   </div>
   <div id="playerList">
   </div>
