lobby system bug finished

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="buttons">
   <input type = "button" id="startbutton1"  value="host game" onClick="createGame()" />
   <input id="startbutton2" type = "button" onClick="JoinGame()" value ="Join Game"/>
-
+<input id="testName" type="text">
 </div>
 <div id="usernamediv" style = "display:none;">
   <input type = "text" id="username" value="enter a username">
