graphics and some cool changes

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
   <div id="buttons">
   <input type = "button" id="startbutton1"  value="host game" onClick="createGame()" />
   <input id="startbutton2" type = "button" onClick="JoinGame()" value ="Join Game"/>
-<input id="testName" type="text">
+  <p style = "color:yellow;">Please enter a Name for your Game!</p>
+<input id="testName" type="text"onclick="this.select();" value="">
 </div>
 <div id="usernamediv" style = "display:none;">
-  <input type = "text" id="username" value="enter a username">
+  <input type = "text"onclick="this.select()" id="username" value="enter a username">
   <input type = "submit" id = "usernameSubmit" value="set username" onClick="setUsername()">
 </div>
   <div id="chat" style = "display:none;">
-    <input type = "text" id = "chatValue" value = "enter message: ">
+    <input type = "text"onclick="this.select()" id = "chatValue" value = "enter message: ">
     <input type = "submit" id="chatSend" onClick="sendChat()" value = "send message">
   </div>
-  <div id="chat">
+  <div id="chatList">
   </div>
   <div id="playerList">
   </div>
