more layout changes

--- a/index.html
+++ b/index.html
@@ -6,15 +6,19 @@
 </head>
 <body>
 <script src="/socket.io/socket.io.js"></script>
+<input type="button" id="refresh" value="leave game" onClick="leaveGame()"/>
   <h1 style="text-align:center;">Created servers!</h1>
+
   <div id="buttons">
 
   <input type = "button" id="startbutton1"  value="host game" onClick="createGame()" />
   <input id="startbutton2" type = "button" onClick="JoinGame()" value ="Join Game"/>
-  <p id="promptforname" style = "color:yellow;">Please enter a Name for your Game!</p>
+  <p id="promptforname" style = "color:black;">Please enter a Name for your Game!</p>
 <input id="testName" type="text"onclick="this.select();" value="">
 </div>
-<input type="button" id="refresh" value="leave game" onClick="leaveGame()"/>
+<div id="lobbylist">
+</div>
+
 <div id="usernamediv" style = "display:none;">
   <input type = "text"onclick="this.select()" id="username" value="enter a username">
   <input type = "submit" id = "usernameSubmit" value="set username" onClick="setUsername()">
