--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <input id="testName" type="text"onclick="this.select();" value="">
 </div>
 <div id="lobbylist">
+  <img src="static/images/same.png" id="same"height="100%"/>
 </div>
 
 <div id="usernamediv" style = "display:none;">
