--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 
   </div>
 </div>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- herokuads -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-9450454838832186"
+     data-ad-slot="1587848497"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 <script src="static/game.js">
 
